<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray_light_trans"
    android:id="@+id/create_word"
    android:elevation="15dp"
    android:focusable="true"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/background"
        android:layout_width="300dp"
        android:layout_height="230dp"
        android:background="@drawable/background_your_turn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/turn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="@id/background"
        app:layout_constraintTop_toTopOf="@id/background"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/write"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:text="@string/write"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="textStart"
        android:layout_marginTop="20dp"
        app:cornerRadius="45dp"
        app:backgroundTint="@color/button_turn"
        app:layout_constraintTop_toBottomOf="@id/turn_text"
        app:layout_constraintStart_toStartOf="@id/background"
        app:layout_constraintEnd_toEndOf="@id/background"/>

    <ImageView
        android:id="@+id/pencil"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_pencil"
        android:elevation="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@id/write"
        app:layout_constraintTop_toTopOf="@id/write"
        app:layout_constraintBottom_toBottomOf="@id/write"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/random"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:text="@string/random"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="textStart"
        android:layout_marginTop="20dp"
        app:cornerRadius="45dp"
        app:backgroundTint="@color/button_turn"
        app:layout_constraintTop_toBottomOf="@id/write"
        app:layout_constraintStart_toStartOf="@id/background"
        app:layout_constraintEnd_toEndOf="@id/background"/>

    <ImageView
        android:id="@+id/dices"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_dices"
        android:elevation="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@id/random"
        app:layout_constraintTop_toTopOf="@id/random"
        app:layout_constraintBottom_toBottomOf="@id/random"/>


</androidx.constraintlayout.widget.ConstraintLayout>