<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".MainActivity">

    <include
        android:id="@+id/pop_up"
        layout="@layout/item_pop_up_sign_in"
        android:visibility="invisible"/>

    <include
        android:id="@+id/create_game"
        layout="@layout/item_create_game"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/naughty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/naughty"
        android:background="@drawable/buttons_menu_color"
        android:layout_margin="30dp"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:padding="12dp"
        android:paddingStart="20dp"
        android:drawablePadding="30dp"
        android:drawableLeft="@drawable/ic_people"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/hot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hot"
        android:background="@drawable/buttons_menu_color"
        android:layout_margin="30dp"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:drawablePadding="30dp"
        android:drawableStart="@drawable/ic_people"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/naughty"
        android:layout_marginTop="50dp"/>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_fire"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="@id/hot"
        app:layout_constraintTop_toTopOf="@id/hot"
        app:layout_constraintBottom_toBottomOf="@id/hot" />

    <TextView
        android:id="@+id/online"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/online"
        android:background="@drawable/buttons_menu_color"
        android:layout_margin="30dp"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:drawableStart="@drawable/ic_transparent"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:drawablePadding="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hot"
        android:layout_marginTop="50dp"/>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_online"
        android:layout_marginStart="18dp"
        app:layout_constraintStart_toStartOf="@id/online"
        app:layout_constraintTop_toTopOf="@id/online"
        app:layout_constraintBottom_toBottomOf="@id/online" />

    <TextView
        android:id="@+id/community"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/community"
        android:background="@drawable/buttons_menu_color"
        android:layout_margin="30dp"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:drawablePadding="30dp"
        android:drawableLeft="@drawable/ic_people"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/online"
        android:layout_marginTop="50dp"/>

    <ImageView
        android:id="@+id/settings"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/ic_settings"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/community"
        app:layout_constraintTop_toBottomOf="@id/community"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>